test/Fail/TopLevelPolarity.agda
{-# OPTIONS --polarity #-}

open import Agda.Builtin.Unit

@- B : Set
B = ⊤
