test/Fail/TopLevelPolarity.err
TopLevelPolarity.agda:5.4-5: error: [TopLevelPolarity]
Definition B has explicit polarity annotation @-
which is currently not supported
